# Optic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
optic_tests/: CMakeLists.txt  main.cpp
